<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/imc_calc_background"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    tools:context=".imccalculator.ImcCalculatorResultActivity">
    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/imc_calc_primary_color"
        android:text="@string/imc_calc_result_act_title"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/imc_calc_card_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultTitle"
        app:layout_constraintBottom_toTopOf="@id/cvContentResult">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="25dp"
            android:paddingVertical="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/imc_calc_primary_color"
                android:text="@string/imc_calc_result_act_data"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/imc_calc_gender"
                        android:textAllCaps="true"
                        android:textColor="@color/imc_calc_card_label" />
                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/imc_calc_primary_color"
                        android:textAlignment="center"
                        tools:text="@string/imc_calc_default_gender"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/imc_calc_height"
                        android:textAllCaps="true"
                        android:textColor="@color/imc_calc_card_label" />
                    <TextView
                        android:id="@+id/tvHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/imc_calc_primary_color"
                        android:textAlignment="center"
                        tools:text="@string/imc_calc_default_height"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/imc_calc_weight"
                        android:textAllCaps="true"
                        android:textColor="@color/imc_calc_card_label" />
                    <TextView
                        android:id="@+id/tvWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/imc_calc_primary_color"
                        android:textAlignment="center"
                        tools:text="@string/imc_calc_default_weight"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/imc_calc_age"
                        android:textAllCaps="true"
                        android:textColor="@color/imc_calc_card_label" />
                    <TextView
                        android:id="@+id/tvAge"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/imc_calc_primary_color"
                        android:textAlignment="center"
                        tools:text="@string/imc_calc_default_age"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvContentResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/imc_calc_card_result_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvData">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/tvImcValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:textColor="@color/imc_calc_normal_weight_result"
                tools:text="Normal"/>
            <TextView
                android:id="@+id/tvImc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                tools:text="25.30"
                android:textColor="@color/imc_calc_card_result_text"
                android:textSize="40sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvImcDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/imc_calc_card_result_text"
                android:textAlignment="center"
                tools:text="@string/imc_calc_imc_desc_normal_weight"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toBottomOf="@id/cvContentResult"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="0dp"
        android:gravity="bottom">
        <Button
            android:id="@+id/btnRecalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/imc_calc_active"
            android:textColor="@color/white"
            android:text="@string/imc_calc_btn_recalculate_text"
            android:textSize="16sp"
            android:paddingVertical="15dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>