<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/imc_calc_background"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    tools:context=".imccalculator.ImcCalculatorActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cvMale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/imc_calc_card_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cvFemale"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/img_description_content_male_icon"
                android:src="@drawable/ic_male"
                app:tint="@color/imc_calc_primary_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/imc_calc_male"
                android:textAllCaps="true"
                android:textColor="@color/imc_calc_card_label" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvFemale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/imc_calc_card_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toRightOf="@id/cvMale"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/img_description_content_female_icon"
                android:src="@drawable/ic_female"
                app:tint="@color/imc_calc_primary_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/imc_calc_female"
                android:textAllCaps="true"
                android:textColor="@color/imc_calc_card_label" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvHeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/imc_calc_card_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvMale">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/imc_calc_height"
                android:textAllCaps="true"
                android:textColor="@color/imc_calc_card_label" />
            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/imc_calc_default_height"
                android:textColor="@color/imc_calc_primary_color"
                android:textSize="30sp"
                android:textStyle="bold" />
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:stepSize="1"
                android:valueFrom="20"
                android:valueTo="200"
                app:thumbColor="@color/purple_500"
                app:trackColorActive="@color/imc_calc_active"
                app:trackColorInactive="@color/imc_calc_range_slider_inactive"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/imc_calc_card_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cvAge"
        app:layout_constraintTop_toBottomOf="@id/cvHeight">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/imc_calc_weight"
                android:textAllCaps="true"
                android:textColor="@color/imc_calc_card_label" />
            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/imc_calc_default_weight"
                android:textColor="@color/imc_calc_primary_color"
                android:textSize="25sp"
                android:textStyle="bold" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnWeightMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:maxImageSize="18dp"
                    app:fabCustomSize = "50dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_minus"
                    app:backgroundTint="@color/imc_calc_active"
                    android:layout_marginEnd="10dp"
                    app:tint="@color/white" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnWeightPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:maxImageSize="18dp"
                    app:fabCustomSize="50dp"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/imc_calc_active"
                    app:tint="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/imc_calc_card_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toRightOf="@id/cvWeight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvHeight">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/imc_calc_age"
                android:textAllCaps="true"
                android:textColor="@color/imc_calc_card_label" />
            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/imc_calc_default_age"
                android:textColor="@color/imc_calc_primary_color"
                android:textSize="25sp"
                android:textStyle="bold" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAgeMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:maxImageSize="18dp"
                    app:fabCustomSize = "50dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_minus"
                    app:backgroundTint="@color/imc_calc_active"
                    android:layout_marginEnd="10dp"
                    app:tint="@color/white" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAgePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:maxImageSize="18dp"
                    app:fabCustomSize="50dp"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/imc_calc_active"
                    app:tint="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toBottomOf="@+id/cvWeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom">
        <Button
            android:id="@+id/btnRecalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/imc_calc_active"
            android:textColor="@color/white"
            android:text="@string/imc_calc_btn_calculate_text"
            android:textSize="16sp"
            android:paddingVertical="15dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>